[package]
name = "duelism"
version = "0.1.0"
edition = "2021"
description = "A backend server for hosting a Duelism instance."
repository = "https://github.com/genericlastname/duelism-server"

[dependencies]
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
rocket = "0.5.0-rc.1"
tokio = { version = "1.16.0", features = ["full"] }
wiremock = "0.5"
